<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuardarPersonas</string>
    <string name="nuevo">New</string>
    <string name="guardar">Save</string>
    <string name="volcar">Volcar</string>
    <string name="cancel">Cancel</string>
    <string name="borrar">Delete</string>
    <string name="buscar">Buscar</string>
    <string name="volver">Volver</string>
    <string name="editar">Edit</string>
    <string name="texto">Borrar</string>
    <string name="mensaje">¿Estas seguro de que quieres borrar?</string>
    <string name="etNombre">Inserte su nombre</string>
    <string name="tvNombre">Nombre</string>
    <string name="etGrupo">Inserte su grupo</string>
    <string name="tvGrupo">Grupo</string>
    <string name="etApellido">Inserte su apellido</string>
    <string name="tvApellido">Apellido</string>
    <string name="etTel">Inserte su teléfono</string>
    <string name="tvTel">Teléfono</string>
    <string name="etObs">Inserte observaciones</string>
    <string name="tvObs">Observaciones</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_campos">Campos</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="aceptar">Aceptar</string>

    <string-array name="grupoSpinner">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="title_activity_tabla_contactos">TablaContactos</string>
    <string name="hello_world">Hello world!</string>

</resources>
